[package]
name = "valid_rust_char" 
version = "0.1.0"
authors = ["IronThread <santinofuenteskillian@gmail.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
description = "A tiny library to check if a char it's valid in a rust file."
repository = "https://github.com/IronThread/valid_rust_char"
keywords = ["char","unicode","idents"]
categories = []

[dependencies]

[build-dependencies]
proc-macro2 = "1"